--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,4 +5,6 @@
     <string name="Button">抓住</string>
     <string name="RadioButton1">可爱</string>
     <string name="RadioButton2">优雅</string>
+    <string name="Text">请输入您的名字</string>
+    <string name="btn">温度转换</string>
 </resources>
